[package]
name = "flash-fuzz"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2.8"
swf = { path = "./swf" }
#regex = "1.5.4"
rand = {version = "0.8.4", features = ["small_rng"]}
lazy_static = "1.4.0"
md5 = "0.7.0"
dirs-next = "2.0.0"
thiserror = "1.0.30"
tokio = {version = "1.13.0", features = ["macros", "fs", "rt"]}
ptrace = { path = "./ptrace", features = [] }
ruffle_core = { path = "./ruffle/core"}

[features]
default = ["flash_file_injection"]
flash_file_injection = []


