[package]
name = "flash-fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2.9"
swf = { path = "./swf" }
rand = {version = "0.8.5", features = ["small_rng"]}
md5 = "0.7.0"
dirs-next = "2.0.0"
thiserror = "1.0.31"
tokio = {version = "1.19.2", features = ["macros", "fs", "rt"]}
ptrace = { path = "./ptrace", features = ["breakpoints"] }
ruffle_core = { path = "./ruffle/core"}
ruffle_render = { path = "./ruffle/render"}

log = "0.4.17"
env_logger = "0.9.0"
tracing = { version = "0.1.35", features = ["log"] }

libc = "0.2.126"

anyhow = "1.0.58"

[features]
default = ["flash_file_injection"]
flash_file_injection = []


